# coeos-SE

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
coeos_se/: __init__.py  __main__.py  anthropic_api.py  app.py  config.py  providers.py  proxy.py  router.py  updates.py
coeos_se/dashboard/: endpoints.html  index.html
coeos_se/settings/: TMB-Settings-SE-v0.1.json  TMB-Settings-SE.json
docs/: PRODUCT.md
tests/: conftest.py  test_anthropic.py  test_api.py  test_proxy.py  test_router.py  test_score_table.py
