[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coeos-se"
version = "0.2.0"
description = "CoeOS SE (Simple Edition) — a benchmark-composed LLM router exposed as an OpenAI-compatible API. Routes each request to the model proven best on that skill axis."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "OdyssAI" }]
keywords = ["llm", "router", "openai", "openrouter", "proxy", "benchmark"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
coeos-se = "coeos_se.__main__:main"

[tool.setuptools.packages.find]
include = ["coeos_se*"]

[tool.setuptools.package-data]
coeos_se = ["dashboard/*.html", "dashboard/images/*", "settings/*.json"]
